# graybox

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci-cd-develop.yaml  ci-cd-development.yaml  ci-cd-main.yaml  ci-pull-request.yaml
graybox/: actions.py  evaluation.py  exceptions.py  graybox.py  status.py
src/code_evaluator_gray_test.egg-info/: PKG-INFO  SOURCES.txt
src/graybox/: graybox.py
src/graybox.egg-info/: PKG-INFO  SOURCES.txt
src/graybox/exceptions/: not_a_function_error.py
src/graybox/tools/: check_file_existence.py  generate_module.py  generate_solution_file.py
tests/: test_failed_gray_box.py  test_gray_box.py  test_graybox.py
tests/resources/: failed_add.py  no_add.py  passed_add.py
