[tool.poetry]
name = "graybox"
version = "0.1.0"
description = ""
authors = ["Marcelo de Jesús Núñez <chelo154@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.8.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
