[metadata]
name = graybox
version = 0.0.1
author = Marcelo de Jesus Nuñez
author_email = chelo154@gmail.com
description = A graybox testing tool for testing functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Nibble-Software/graybox
project_urls =
    Bug Tracker = package issues url
classifiers =
    Programming Language :: Python :: 3
license_files = LICENSE.txt

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src